--- a/main.html
+++ b/main.html
@@ -3,11 +3,32 @@
 <html>
 
 <head>
+	<style>
+    blockquote {
+      max-width: 600px;
+      margin: 10px;
+      padding: 15px;
+      border-left: 8px solid green;
+      background-color: #f8fffe;
+      font-weight: bold;
+    }
+    </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3>What is the capital of India?</h3>
+    <form>
+    <input type="radio" name="capital" value="new-delhi"> New Delhi<br>
+    <input type="radio" name="capital" value="mumbai"> Mumbai
+    </form>
+
+    <blockquote>
+    "New Delhi is the capital of India and an administrative district of NCT Delhi."
+    <br>
+    <cite>Reference: <a href="https://en.wikipedia.org/wiki/New_Delhi" target="_blank">Wikipedia</a></cite>
+    </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
