--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     </form>
 
     <blockquote>
-    "New Delhi is the capital of India and an administrative district of NCT Delhi."
+    New Delhi is the capital of India and an administrative district of NCT Delhi.
     <br>
     </blockquote>
     <script type="text/javascript" src="./script.js">
